<resources>
    <string name="app_name">智能控制屏</string>
    <string name="btn_error_report">详细信息</string>
    <string name="pref_title_multicast_address">组播监听地址</string>
    <string name="pref_title_multicast_port">监听广播端口</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_title_driverproxy_address">驱动代理地址</string>
    <string name="pref_title_driverproxy_port">驱动代理服务端口</string>
    <string name="pref_title_mine_id">本设备ID</string>
    <string name="pref_mine_id_defval">未命名</string>
    <string name="promptTxtBasicSettings">设备ID必须被设置</string>
    <string name="btn_open_settings">修改配置</string>
    <string name="common_undefined_device_name">---</string>
    <string name="common_undefined_value">--</string>
    <string name="pref_title_material_folder">素材位置</string>
    <string name="pref_title_rotate_screen">旋转屏幕</string>
    <string name="pref_rotate_screen_defval">不旋转</string>

    <string name="direction_landscape">横屏</string>
    <string name="direction_landscape_reverse">反向横屏</string>
    <string name="direction_portait">竖屏</string>
    <string name="direction_portait_reverse">反向竖屏</string>
    <string name="title_activity_normal_floor_heating">NormalFloorHeatingActivity</string>
</resources>
