<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="pref_key_mine_id"
        android:title="@string/pref_title_mine_id"
        android:defaultValue="@string/pref_mine_id_defval"/>
    <EditTextPreference
        android:key="pref_key_driverproxy_address"
        android:title="@string/pref_title_driverproxy_address"
        android:defaultValue="127.0.0.1"/>
    <EditTextPreference
        android:key="pref_key_driverproxy_port"
        android:title="@string/pref_title_driverproxy_port"
        android:defaultValue="8981"
        android:inputType="number"/>
    <EditTextPreference
        android:key="pref_key_multicast_address"
        android:title="@string/pref_title_multicast_address"
        android:defaultValue="224.0.0.4"/>
    <EditTextPreference
        android:key="pref_key_multicast_port"
        android:title="@string/pref_title_multicast_port"
        android:defaultValue="8982"
        android:inputType="number"/>
    <EditTextPreference
        android:key="pref_key_material_folder"
        android:title="@string/pref_title_material_folder"
        android:defaultValue="smarthome/materials"/>
</PreferenceScreen>